--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <body>
     <!-- This is a template HTML for a post item -->
-    <template id="postItemTemplate">
+    <template id="postTemplate">
       <li class="col-12 col-md-6 col-lg-4">
         <div class="post-item mb-4">
           <div class="card">
@@ -170,7 +170,7 @@
 
           <!-- Posts list -->
           <ul id="postsList" class="row posts-list justify-content-center">
-            <li class="col-12 col-md-6 col-lg-4">
+            <!-- <li class="col-12 col-md-6 col-lg-4">
               <div class="post-item mb-4">
                 <div class="card">
                   <img
@@ -205,7 +205,7 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
 
           <!-- Posts pagination -->
@@ -240,6 +240,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/js/home.js"></script>
   </body>
 </html>
