Fetch API -Description -Title -Author -Timespan -Image Hero -Edit page link

--- a/post-detail.html
+++ b/post-detail.html
@@ -122,5 +122,6 @@
     <footer class="text-center text-muted py-3">
       <small>Created by Duc Long with <i class="fas fa-heart"></i></small>
     </footer>
+    <script type="module" src="/js/post-detail.js"></script>
   </body>
 </html>
