--- a/add-edit-post.html
+++ b/add-edit-post.html
@@ -119,6 +119,11 @@
     <footer class="text-center text-muted py-3">
       <small>Created by Duc Long with <i class="fas fa-heart"></i></small>
     </footer>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="/js/add-edit-post.js"></script>
   </body>
 </html>
