--- a/add-edit-post.html
+++ b/add-edit-post.html
@@ -43,7 +43,7 @@
           <ul class="nav justify-content-between align-items-center">
             <li class="nav-item">
               <a class="nav__link" href=".">
-                <img class="nav__logo" src="images/logo.png" alt="Logo Camp" />
+                <img class="nav__logo" srcset="images/logo.png" alt="Logo Camp" />
               </a>
             </li>
 
@@ -156,6 +156,8 @@
                 <label class="input-group-text" for="uploadImage">Upload</label>
                 <div class="invalid-feedback"></div>
               </div>
+
+              
 
               <div class="text-center">
                 <button name="submit" class="btn btn-primary">
